As User: override Fragment confidence #1
